--- a/wk2/Burroughs_Otto_PWA2/css/style.css
+++ b/wk2/Burroughs_Otto_PWA2/css/style.css
@@ -14,7 +14,7 @@ html {
       width: 100%;
       padding: 0;
       margin: 0 auto;
-	  background-image:url('http://g8dezigns.com/fit/bkg3.jpg');
+	  background-image:url('http://g8dezigns.com/fit/bkg1.jpg');
 	  /*
 	  background-image:url('http://g8dezigns.com/fit/bkg3.jpg');
 	  background-image:url('http://g8dezigns.com/fit/bkg3.jpg');
@@ -30,18 +30,35 @@ body{
 	padding: 0;	
 }
 
+.content{
 
+	width: 100%;
+	height: auto;
+	background-color: transparent;
+
+
+}
 .tagline{
 
-	position: absolute;
-	top: 350px;
-	left: 460px;
 	width: 505px;
-	text-align: center;
+	text-align: left;
 	font-family: "Helvetica Neue", arial;
-	font-size: 24px;
+	font-size: 27px;
 
 
+}
+
+#mainCTA{
+
+	margin: 0 auto;
+	padding: 5px;
+	width: 450px;
+	height: 300px;
+	text-align: justify;
+	font-family: "Helvetica Neue", Arial;
+	font-size: 15px;
+	float: right;
+	position: relative;
 }
 
 	
@@ -73,6 +90,7 @@ header{
 	margin: 4px auto;
 	padding: 2px;
 	background-color: #60b831;
+	border: 2px solid red;
 }
 .smalllogo{
 	width: 250px;
@@ -100,11 +118,10 @@ header{
 }
 
 .adminnav{
-    width: 240px;
-    height: 500px;
-    margin-top: 5px;
+    width: 190px;
+    height: 240px;
+    margin-top: 25px;
 	padding: 2px;
-
     background: rgb(0, 0, 0); /* The Fallback */
     background: rgba(0, 0, 0, 0.5); 
 }
@@ -115,6 +132,7 @@ header{
 	margin: 5px;
 	padding: 5px;
 	color: #60b831;
+	border: 2px solid silver; 
 	background-color: #eee;
 	display: block;
 	/*clear: both;*/
@@ -124,23 +142,34 @@ header{
 	font-family: Impact, arial;
 }
 
-
 .adminui{
 
 	width: 700px;
 	height: 500px;
 	margin: 5px auto;
 	padding: 2px;
-	border: 1px  solid white;
-	background: rgb(0, 0, 0); /* The Fallback */
-    background: rgba(0, 0, 0, 0.5); 
+	/*background: rgb(0, 0, 0); /* The Fallback*/
+    /*background: rgba(0, 0, 0, 0.5); */
 	float: right;
 
+}
+
+#accordintable{
+
+	width: 695px;
+	height: 500px;
+	clear: left;
+	position: relative;
+	top: -290px;
+	left: 260px;
+	overflow: hidden;
 }
 
 
 /*Main Navigation
 --------------------------------------------------------------------*/
+/*
+
 nav {
     width: 100%;
     margin: .5 auto;
@@ -148,7 +177,7 @@ nav {
     text-align: center;
     position: relative;
     overflow: hidden;
-    background: rgb(0, 0, 0); /* The Fallback */
+    background: rgb(0, 0, 0); 
     background: rgba(0, 0, 0, 0.9); 
     clear: both;
 	    
@@ -162,7 +191,6 @@ nav ul{
 	padding: 2px;
 	list-style-type: none;
 
-	/*background: #539b2a;*/
 
 
 }
@@ -190,6 +218,172 @@ nav ul li a {
     
 
 }
+/*
+
+/* jquery nav with images
+--------------------------------------------------------------------*/
+
+
+#navbox{
+
+
+	margin: 0 auto;
+	padding: .5em;
+	float: right;
+
+}
+
+
+
+ul.sdt_menu{
+	 
+	 margin: 100px auto;
+	 padding: 0;
+	 list-style: none;
+	 font-family: "Helvetica Neue", "Trebuchet MS", sans-serif;
+	 font-size: 14px;
+	 width: 960px;
+}
+
+ul.sdt_menu a{
+
+	 text-decoration: none;
+	 outline: none;
+}
+
+ul.sdt_menu li{
+
+	 float: right;
+	 width: 170px;
+	 height: 85px;
+	 position: relative;
+	 background-color: #60b831;
+	 cursor: pointer;
+}
+
+ul.sdt_menu li > a{
+
+	 position: absolute;
+	 top: 0px;
+	 left: 0px;
+	 width: 170px;
+	 height: 85px;
+	 z-index: 12;
+	 background: transparent url(../images/overlay.png) no-repeat bottom right;
+	 -moz-box-shadow: 0px 0px 2px #000;
+	 -webkit-box-shadow: 0px 0px 2px #000;
+	 box-shadow: 0px 0px 2px #000;
+}
+
+ul.sdt_menu li a img{
+
+	 border: none;
+	 position: absolute;
+	 width: 0px;
+	 height: 0px;
+	 bottom: 0px;
+	 left: 85px;
+	 z-index: 100;
+	 -moz-box-shadow: 0px 0px 4px #000;
+	 -webkit-box-shadow: 0px 0px 4px #000;
+	 box-shadow: 0px 0px 4px #000;
+}
+
+ul.sdt_menu li span.sdt_wrap{
+
+	 position: absolute;
+	 top: 25px;
+	 left: 0px;
+	 width: 170px;
+	 height: 60px;
+	 z-index: 15;
+}
+
+ul.sdt_menu li span.sdt_active{
+
+	 position: absolute;
+	 background: #111;
+	 top: 85px;
+	 width: 170px;
+	 height: 0px;
+	 left: 0px;
+	 z-index: 14;
+	 -moz-box-shadow: 0px 0px 4px #000 inset;
+	 -webkit-box-shadow: 0px 0px 4px #000 inset;
+	 box-shadow: 0px 0px 4px #000 inset;
+}
+
+ul.sdt_menu li span span.sdt_link,
+ul.sdt_menu li span span.sdt_descr,
+ul.sdt_menu li div.sdt_box a{
+
+	 margin-left: 15px;
+	 text-transform: uppercase;
+	 text-shadow: 1px 1px 1px #000;
+}
+
+ul.sdt_menu li span span.sdt_link{
+
+	 color: #fff;
+	 font-size: 24px;
+	 float: left;
+	 clear: both;
+}
+
+ul.sdt_menu li span span.sdt_descr{
+	 color: #0088ae;
+	 float: left;
+	 clear: both;
+	 width: 155px;
+	 font-size: 10px;
+	 letter-spacing: 1px;
+}
+
+ul.sdt_menu li div.sdt_box{
+
+	 display: block;
+	 position: absolute;
+	 width: 170px;
+	 overflow: hidden;
+	 height: 120px;
+	 top: 85px;
+	 left: 0px;
+	 display: none;
+	 background:#000;
+}
+ul.sdt_menu li div.sdt_box a{
+
+	 float: left;
+	 clear: both;
+	 line-height: 30px;
+	 color: #0088ae;
+}
+
+ul.sdt_menu li div.sdt_box a:first-child{
+
+ 	margin-top: 15px;
+}
+
+ul.sdt_menu li div.sdt_box a:hover{
+ 	
+ 	color: #fff;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* Logo
 --------------------------------------------------------------------*/
@@ -207,6 +401,8 @@ nav ul li a {
 
 /* Main CTA login and registration buttons
 --------------------------------------------------------------------*/
+/* Chaning around the main CTA 
+
 .login{
 	position: absolute;
 	top: 475px;
@@ -222,7 +418,10 @@ nav ul li a {
 	width: auto;
 
 }
-	
+*/	
+
+
+
 
 /* Registration Page Form inputs
 --------------------------------------------------------------------*/
@@ -232,26 +431,180 @@ nav ul li a {
 	padding: 5px;
 	width: 450px;
 	height: 300px;
-	position: relative;
-	top: 340px;
+
 	
 }
 
-.twitter{
+/*
+*
+* LOGIN/ REGISTRATION FORM 
+*
+*/
 
-	position: absolute;
-	top: 220px;
-	left: 265px;
-	
+
+/* Form Style */
+.form_wrapper{
+	background: transparent;
+	/*border:1px solid #ddd;*/
+	margin:0 auto;
+	width:350px;
+	font-size:16px;
+	-moz-box-shadow:1px 1px 7px #ccc;
+	-webkit-box-shadow:1px 1px 7px #ccc;
+	box-shadow:1px 1px 7px #ccc;
+	float: right;
+}
+.form_wrapper h3{
+	padding:20px 30px 20px 30px;
+	background-color:#444;
+	color:#fff;
+	font-size:25px;
+	border-bottom:1px solid #ddd;
+}
+.form_wrapper form{
+	display:none;
+	background: transparent;
+}
+.form_wrapper .column{
+	width:47%;
+	float:left;
+}
+form.active{
+	display:block;
+}
+form.login{
+	width:350px;
+}
+form.register{
+	width:550px;
+}
+form.forgot_password{
+	width:300px;
+}
+.form_wrapper a{
+	text-decoration:none;
+	color:#777;
+	font-size:12px;
+}
+.form_wrapper a:hover{
+	color:#000;
+}
+.form_wrapper label{
+	display:block;
+	padding:10px 30px 0px 30px;
+	margin:10px 0px 0px 0px;
+}
+.form_wrapper input[type="text"],
+.form_wrapper input[type="password"]{
+	border: solid 1px #E5E5E5;
+	background: #FFFFFF;
+	margin: 5px 30px 0px 30px;
+	padding: 9px;
+	display:block;
+	font-size:16px;
+	width:76%;
+	background: 
+		-webkit-gradient(
+			linear,
+			left top,
+			left 25,
+			from(#FFFFFF),
+			color-stop(4%, #EEEEEE),
+			to(#FFFFFF)
+		);
+	background: 
+	-moz-linear-gradient(
+			top,
+			#FFFFFF,
+			#EEEEEE 1px,
+			#FFFFFF 25px
+			);
+	-moz-box-shadow: 0px 0px 8px #f0f0f0;
+	-webkit-box-shadow: 0px 0px 8px #f0f0f0;
+	box-shadow: 0px 0px 8px #f0f0f0;
+}
+.form_wrapper input[type="text"]:focus,
+.form_wrapper input[type="password"]:focus{
+	background:#feffef;
+}
+.form_wrapper .bottom{
+	background-color:#444;
+	border-top:1px solid #ddd;
+	margin-top:20px;
+	clear:both;
+	color:#fff;
+	text-shadow:1px 1px 1px #000;
+}
+.form_wrapper .bottom a{
+	display:block;
+	clear:both;
+	padding:10px 30px;
+	text-align:right;
+	color:#ffa800;
+	text-shadow:1px 1px 1px #000;
+}
+.form_wrapper a.forgot{
+	float:right;
+	font-style:italic;
+	line-height:24px;
+	color: red;
+	text-shadow:1px 1px 1px #fff;
+}
+.form_wrapper a.forgot:hover{
+	color:#000;
+}
+.form_wrapper div.remember{
+	float:left;
+	width:140px;
+	margin:20px 0px 20px 30px;
+	font-size:11px;
+}
+.form_wrapper div.remember input{
+	float:left;
+	margin:2px 5px 0px 0px;
+}
+.form_wrapper span.error{
+	visibility:hidden;
+	color:red;
+	font-size:11px;
+	font-style:italic;
+	display:block;
+	margin:4px 30px;
+}
+.form_wrapper input[type="submit"] {
+	background: #e3e3e3;
+	border: 1px solid #ccc;
+	color: #333;
+	font-family: "Helvetica Neue", "Myriad Pro", sans-serif;
+	font-size: 14px;
+	font-weight: bold;
+	padding: 8px 0 9px;
+	text-align: center;
+	width: 150px;
+	cursor:pointer;
+	float:right;
+	margin:15px 20px 10px 10px;
+	text-shadow: 0px 1px 0px #fff;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	-moz-box-shadow: 0px 0px 2px #fff inset;
+	-webkit-box-shadow: 0px 0px 2px #fff inset;
+	box-shadow: 0px 0px 2px #fff inset;
+}
+.form_wrapper input[type="submit"]:hover {
+	background: #d9d9d9;
+	-moz-box-shadow: 0px 0px 2px #eaeaea inset;
+	-webkit-box-shadow: 0px 0px 2px #eaeaea inset;
+	box-shadow: 0px 0px 2px #eaeaea inset;
+	color: #222;
 }
 
-.facebook{
 
-	position: absolute;
-	top: 170px;
-	left: 270px;
-	
-}
+
+
+
+
 
 
 /* Footer
@@ -262,8 +615,7 @@ footer {
     left: 0;
     text-align: center;
     position: absolute;
-    
-    overflow: hidden
+    overflow: hidden;
 }
 
 footer ul {
